--- a/portfolio.html
+++ b/portfolio.html
@@ -116,6 +116,7 @@
     </form>
     </div>
     </footer>
+    <script src="./burger.js"></script>
   <script src="./js/modal.js"></script>
 </body>
 </html>
