--- a/portfolio.html
+++ b/portfolio.html
@@ -22,6 +22,11 @@
           <li class="li-header"><a href="./portfolio.html" class="li-headera link linea">Portfolio</a></li>
           <li class="li-header"><a href="" class="li-headera link">Contacts</a></li>
         </ul>
+        <button class="menu-toggle js-open-menu" image.pngaria-expanded="false" aria-controls="mobile-menu">
+          <svg width="32" height="22" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+          <use href="./images/icons.svg#icon-burger"></use>        
+          </svg>
+        </button> 
       </nav>
       <address class="adresa">
         <ul class="ul-adresa list">
@@ -116,7 +121,21 @@
     </form>
     </div>
     </footer>
-    <script src="./burger.js"></script>
+    <div class="menu-container js-menu-container" id="mobile-menu">
+      <button class="menu-toggle js-close-menu">
+        <svg fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg" width="24" height="24">
+          <path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path>
+        </svg>
+      </button>
+      <ul class="mobile-menu">
+        <li><a href="./index.html" class="link">Studio</a></li>
+        <li><a href="./portfolio.html" class="link">Portfolio</a></li>
+        <li><a href="" class="link">Contacts</a></li>
+      </ul>
+    </div>
+    <script src="./modal.js"></script>
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js" integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA==" crossorigin="anonymous"></script>
+    <script defer src="./mobile-menu.js"></script>
   <script src="./js/modal.js"></script>
 </body>
 </html>
