--- a/index.html
+++ b/index.html
@@ -211,8 +211,8 @@
     <li><a href="" class="mobile-nav link">Contacts</a></li>
   </ul>
   <ul class="mobile-contacts list">
-    <li class="burg-number"><a href="tel:11000111111" class="a-contacts">+11 (000) 111-11-11</a></li>
-    <li class="burg-email"><a href="mailto:info@devstudio.com" class="a-contacts">info@devstudio.com</a></li>
+    <li class="li-number"><a href="tel:11000111111" class="a-mobile blue">+11 (000) 111-11-11</a></li>
+    <li class="li-mail"><a href="mailto:info@devstudio.com" class="a-mobile grey">info@devstudio.com</a></li>
   </ul>
   <ul class="mobile-social list">
     <li class="li-socialf"><a class="a-socialf" href=""><svg class="icon-socialf svg" width="24" height="24"><use href="./images/icons.svg#icon-instagram"></use></svg></a></li>
