--- a/portfolio.html
+++ b/portfolio.html
@@ -11,22 +11,24 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:ital,wght@0,400;0,500;0,700;1,100&display=swap" rel="stylesheet">
 </head>
-<body class="body">
+
   <!--hat-->
   <header class="header">
     <div class="port-divhead container">
       <nav class="nav-header">
+        
       <a href="./index.html" class="logo-link link">Web<span class="logo-linktwo">Studio</span></a>
         <ul class="ul-header list">
           <li class="li-header"><a href="./index.html" class="li-headera link">Studio</a></li>
           <li class="li-header"><a href="./portfolio.html" class="li-headera link linea">Portfolio</a></li>
           <li class="li-header"><a href="" class="li-headera link">Contacts</a></li>
         </ul>
-        <button class="menu-toggle js-open-menu" image.pngaria-expanded="false" aria-controls="mobile-menu">
-          <svg width="32" height="22" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-          <use href="./images/icons.svg#icon-burger"></use>        
-          </svg>
-        </button> 
+        <body class="body">
+          <button class="menu-toggle js-open-menu" image.pngaria-expanded="false" aria-controls="mobile-menu">
+            <svg width="32" height="22" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+            <use href="./images/icons.svg#icon-burger"></use>        
+            </svg>
+          </button> 
       </nav>
       <address class="adresa">
         <ul class="ul-adresa list">
@@ -123,14 +125,25 @@
     </footer>
     <div class="menu-container js-menu-container" id="mobile-menu">
       <button class="menu-toggle js-close-menu">
-        <svg fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg" width="24" height="24">
-          <path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path>
-        </svg>
-      </button>
-      <ul class="mobile-menu">
-        <li><a href="./index.html" class="link">Studio</a></li>
-        <li><a href="./portfolio.html" class="link">Portfolio</a></li>
-        <li><a href="" class="link">Contacts</a></li>
+        <svg class="modal-button-close-svg" width="8" height="8">
+          <use href="./images/icons.svg#icon-modal-close"></use>
+      </svg>
+        </a>
+    </button>
+      <ul class="mobile-menu mobile-kelvin">
+        <li><a href="./index.html" class="mobile-nav link">Studio</a></li>
+        <li><a href="./portfolio.html" class="mobile-active link">Portfolio</a></li>
+        <li><a href="" class="mobile-nav link">Contacts</a></li>
+      </ul>
+      <ul class="mobile-contacts list">
+        <li class="li-number"><a href="tel:11000111111" class="a-mobile blue">+11 (000) 111-11-11</a></li>
+        <li class="li-mail"><a href="mailto:info@devstudio.com" class="a-mobile grey">info@devstudio.com</a></li>
+      </ul>
+      <ul class="mobile-social list">
+        <li class="li-socialf"><a class="a-socialf" href=""><svg class="icon-socialf svg" width="24" height="24"><use href="./images/icons.svg#icon-instagram"></use></svg></a></li>
+        <li class="li-socialf"><a class="a-socialf" href=""><svg class="icon-socialf svg" width="24" height="24"><use href="./images/icons.svg#icon-twitter"></use></svg></a></li>
+        <li class="li-socialf"><a class="a-socialf" href=""><svg class="icon-socialf svg" width="24" height="24"><use href="./images/icons.svg#icon-facebook"></use></svg></a></li>
+        <li class="li-socialf"><a class="a-socialf" href=""><svg class="icon-socialf svg" width="24" height="24"><use href="./images/icons.svg#icon-linkedin"></use></svg> </a></li>  
       </ul>
     </div>
     <script src="./modal.js"></script>
