--- a/portfolio.html
+++ b/portfolio.html
@@ -32,10 +32,10 @@
       </nav>
       <address class="adresa">
         <ul class="ul-adresa list">
-          <li class="li-header">
+          <li class="li-headeradress">
             <a href="mailto:info@devstudio.com" class="gmail link">info@devstudio.com</a>
           </li>
-          <li class="li-header">
+          <li class="li-headeradress">
             <a href="tel:+110001111111" class="gmail link">+11(000)111-11-11</a>
           </li>
         </ul>
