--- a/index.html
+++ b/index.html
@@ -149,13 +149,15 @@
 </ul>
 </div>
 
-<div>
+<div class="div-subscribe">
   <p class="p-form">Subscribe</p>
 <form class="foot-form">
   <label class="foot-label">
   <input type="email" class="foot-input" name="E-mail" placeholder="E-mail">
   </label>
-  <button type="subscribe" class="button-form"><p class="p-sub">Subscribe</p><svg class="footer-subscribe-svg"><use href="./images/icons.svg#icon-sub" width="24" height="24"></use></svg></button>
+  <button type="subscribe" class="button-form"><p class="p-sub">Subscribe</p>
+    <svg class="footer-subscribe-svg"><use href="./images/icons.svg#icon-sub" width="24" height="24"></use></svg>
+  </button>
 </form>
 </div>
 </footer>
