--- a/index.html
+++ b/index.html
@@ -80,8 +80,9 @@
   <div class="div-sectionfour container">
     <h2 class="sectionfour-h">Our Team</h2>
     <ul class="sectionfour-ul list">
-        <li class="sectionfour-li"><img srcset="./images/1x2x/mark@1x.jpg 1x,
-          ./images/1x2x/Mark@2x.jpg 2x" src="./images/Mark.jpg" alt="its Mark Guerrero" width="264" class="img"><div class="div-name"><h3 class="sectionfour-he">Mark Guerrero</h3><p class="sectionfour-p">Product Designer</p>
+        <li class="sectionfour-li"><img srcset="./images/photo1x2x/Mark@1x.jpg 1x,
+          ./images/photo1x2x/Mark@2x.jpg 2x"
+                     src="./images/Mark.jpg" alt="its Mark Guerrero" width="264" class="img"><div class="div-name"><h3 class="sectionfour-he">Mark Guerrero</h3><p class="sectionfour-p">Product Designer</p>
         <ul class="ul-social list">
             <li class="li-social"><a class="a-social" href=""><svg class="icon-social svg" width="16" height="16"><use href="./images/icons.svg#icon-instagram"></use></svg></a></li>
             <li class="li-social"><a class="a-social" href=""><svg class="icon-social svg" width="16" height="16"><use href="./images/icons.svg#icon-twitter"></use></svg></a></li>
@@ -90,8 +91,9 @@
         </ul>
       </div>
     </li>
-        <li class="sectionfour-li"><img  srcset="./images/1x2x/Tom@1x.jpg 1x,
-          ./images/1x2x/Tom@2x.jpg 2x"src="./images/Tom.jpg" alt="its Tom Ford" width="264" class="img"><div class="div-name"><h3 class="sectionfour-he">Tom Ford</h3><p class="sectionfour-p">Frontend Developer</p>
+        <li class="sectionfour-li"><img  
+          srcset="./images/photo1x2x/Tom@1x.jpg 1x,
+          ./images/photo1x2x/Tom@2x.jpg 2x" src="/images/Tom.jpg" alt="its Tom Ford" width="264" class="img"><div class="div-name"><h3 class="sectionfour-he">Tom Ford</h3><p class="sectionfour-p">Frontend Developer</p>
           <ul class="ul-social list">
             <li class="li-social"><a class="a-social" href=""><svg class="icon-social svg" width="16" height="16"><use href="./images/icons.svg#icon-instagram"></use></svg></a></li>
             <li class="li-social"><a class="a-social" href=""><svg class="icon-social svg" width="16" height="16"><use href="./images/icons.svg#icon-twitter"></use></svg></a></li>
@@ -100,8 +102,8 @@
         </ul>
       </div>
     </li>
-        <li class="sectionfour-li"><img srcset="./images/1x2x/Camila@1x.jpg 1x,
-          ./images/1x2x/Camila@2x.jpg 2x" src="./images/Camila.jpg" alt="its Camila Garcia" width="264" class="img"><div class="div-name"><h3 class="sectionfour-he">Camila Garcia</h3><p class="sectionfour-p">Marketing</p>
+        <li class="sectionfour-li"><img srcset="./images/photo1x2x/Camila@1x.jpg 1x,
+          ./images/photo1x2x/Camila@2x.jpg 2x" src="./images/Camila.jpg" alt="its Camila Garcia" width="264" class="img"><div class="div-name"><h3 class="sectionfour-he">Camila Garcia</h3><p class="sectionfour-p">Marketing</p>
           <ul class="ul-social list">
             <li class="li-social"><a class="a-social" href=""><svg class="icon-social svg" width="16" height="16"><use href="./images/icons.svg#icon-instagram"></use></svg></a></li>
             <li class="li-social"><a class="a-social" href=""><svg class="icon-social svg" width="16" height="16"><use href="./images/icons.svg#icon-twitter"></use></svg></a></li>
@@ -110,8 +112,8 @@
         </ul>
       </div>
     </li>
-        <li class="sectionfour-li"><img srcset="./images/1x2x/Daniel@1x.jpg 1x,
-          ./images/1x2x/Daniel@2x.jpg 2x" src="./images/Danila.jpg" alt="its Daniel Wilson" width="264" class="img"><div class="div-name"><h3 class="sectionfour-he">Daniel Wilson</h3><p class="sectionfour-p">UI Designer</p>
+        <li class="sectionfour-li"><img srcset="./images/photo1x2x/Daniel@1x.jpg 1x,
+          ./images/photo1x2x/Daniel@2x.jpg 2x" src="./images/Danila.jpg" alt="its Daniel Wilson" width="264" class="img"><div class="div-name"><h3 class="sectionfour-he">Daniel Wilson</h3><p class="sectionfour-p">UI Designer</p>
           <ul class="ul-social list">
           <li class="li-social"><a class="a-social" href=""><svg class="icon-social svg" width="16" height="16"><use href="./images/icons.svg#icon-instagram"></use></svg></a></li>
           <li class="li-social"><a class="a-social" href=""><svg class="icon-social svg" width="16" height="16"><use href="./images/icons.svg#icon-twitter"></use></svg></a></li>
